# azc-rust

./: .gitignore  Cargo.toml  Makefile
azml/: Cargo.toml
azml/src/: lib.rs
azml/src/azcore/ownership/: ownership.rs  ownership_yaml.rs
azml/src/azfl/: mod.rs
azml/src/azfl/deletion/: deletion.rs  deletion_yaml.rs
azml/src/azfl/ownership/: ownership.rs  ownership_yaml.rs
azml/src/azml/: abstract_.rs  abstract_yaml.rs  adjunct.rs  adjunct_yaml.rs  arity.rs  arity_yaml.rs  attribute.rs  attribute_yaml.rs  authorization.rs  authorization_yaml.rs  cardinality.rs  cardinality_yaml.rs  compiler.rs  data_type.rs  eid.rs  eid_yaml.rs  error.rs  generator.rs  generator_go.rs  generator_go_yaml.rs  id_num.rs  id_num_yaml.rs  import.rs  mixin.rs  mixin_yaml.rs  mod.rs  module.rs  oid.rs  oid_yaml.rs  primitive.rs  ref_key.rs  ref_key_yaml.rs  source_file.rs  source_file_yaml.rs  symbol.rs  symbol_yaml.rs  yaml.rs
azml/src/azml/adjunct/: adjunct.rs  adjunct_cardinal.rs  adjunct_cardinal_yaml.rs  adjunct_entity.rs  adjunct_entity_yaml.rs  adjunct_prime.rs  adjunct_prime_yaml.rs  adjunct_value_object.rs  adjunct_value_object_yaml.rs  adjunct_yaml.rs  mod.rs
azml/src/azml/entity/: abstract_.rs  abstract_yaml.rs  entity.rs  entity_id.rs  entity_id_integer.rs  entity_id_integer_yaml.rs  entity_id_num.rs  entity_id_num_integer.rs  entity_id_num_integer_yaml.rs  entity_id_num_yaml.rs  entity_id_yaml.rs  entity_yaml.rs  mod.rs
azml/src/azml/id/: id_num_yaml.rs  mod.rs  ref_key.rs  ref_key_yaml.rs
azml/src/azml/value_object/: mod.rs  value_object.rs  value_object_yaml.rs
(+195 files in other folders)
