[package]
name = "azc-rust"
version = "0.1.0"
authors = ["Fahrezal Effendi <exavolt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azml = { path = "azml" }
convert_case = "0.4.0"
gtmpl = "0.5"
gtmpl_derive = "0.3"
gtmpl_value = "0.3"
