[package]
name = "azml"
version = "0.1.0"
authors = ["Fahrezal Effendi <exavolt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mopa-maintained = "0.2.3"
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
